2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_tests_dejagnu): Move the definition of a
	default `site.exp' into...
	* dejagnu.am (site.exp): here.
	Use DOS compliant file names.

	
2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&dist_cmp): New.
	(&handle_dist): Use it.
	Promote `my' over `local'.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* dist.am: Remove, merge into...
	* distdir.am: here.  Use the neat sed snippet for banners.
	BTW, distcheck is phony.
	* automake.in (&handle_dist_worker): Remove, merge into...
	(&handle_dist): this.
	(&file_contents): Strip leading new lines.
	Be sure to end comments with new lines.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* distdir.am (GZIP_ENV): Define.
	* automake.in (&handle_dist): Don't.
	(&uniq): New.
	(&handle_dist_worker, &am_install_var): Use it.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* distdir.am (distdir): Handle the DIST-TARGETS.
	* automake.in (&handle_dist_worker): Don't.

	
2001-02-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Transform the global options (such
	as CYGNUS).
	(&handle_texinfo, &handle_dist_worker, &handle_tests_dejagnu): Don't.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* distdir.am (distdir): Be sure to have permissive rights on its
	contents.
	(dist-all, dist-bzip2, dist-zip, dist-tarZ): New conditional
	targets.
	And BTW, all these guys are phony.
	* automake.in (&handle_dist_worker): As its name doesn't indicate,
	output distributions.
	(&handle_dist): As its name doesn't indicate, don't.
	(&initialize_global_constants): Don't define variables which
	content is now handled by distdir.am.
	But register `dist-all' as a factored target.
	(&handle_factored_dependencies): Don't output empty targets.

2001-02-20  Tom Tromey  <tromey@redhat.com>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Simplify m4_pattern_allow
	invocation.

2001-02-18  Tom Tromey  <tromey@redhat.com>
