@@ -1,5 +1,14 @@
 2001-02-21  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&initialize_global_constants): Don't define $USAGE.
+	(&usage): Handle the former content of $USAGE.
+	Don't pretend autoconf cares about Makefile.in.
+	Classify the options.
+	(&handle_tests): Formatting and mying changes.
+
+	
+2001-02-21  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&handle_tests_dejagnu): Move the definition of a
 	default `site.exp' into...
 	* dejagnu.am (site.exp): here.
